normalize Changes header line according to CPAN::Changes::Spec

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-# Changes to Pegs::PDF
+Revision history for Perl module Pegs::PDF
 
 0.10_02 - Tue Mar 11 14:23:25 2014
 	* Get rid of Module::Build. Other minor updates.
