--- a/README.pod
+++ b/README.pod
@@ -32,17 +32,8 @@ name instead of the file location:
 
 	% perldoc PeGS::PDF
 
-You can read the documentation and inspect the meta data on one of the 
-CPAN web interfaces, such as L<CPAN Search|http://search.cpan.org/dist/PeGS-PDF> or 
-L<MetaCPAN|http://www.metacpan.org/module/PeGS::PDF>:
-
-=over 4
-
-=item *	L<http://search.cpan.org/dist/PeGS-PDF>
-
-=item *	L<http://www.metacpan.org/module/PeGS::PDF>
-
-=back
+You can read the documentation and inspect the meta data on
+L<MetaCPAN|http://www.metacpan.org/module/PeGS::PDF>.
 
 The standard module documentation has example uses in the SYNOPSIS
 section, but you can also look in the I<examples/> directory (if it's
