--- a/README.pod
+++ b/README.pod
@@ -2,11 +2,11 @@
 
 =encoding utf8
 
-=for HTML <a href="../../actions?query=workflow%3Amacos"><img src="../../workflows/macos/badge.svg"></a>
+=for HTML <a href="https://www.github.com/briandfoy/pegs-pdf/actions?query=workflow%3Amacos"><img src="../../workflows/macos/badge.svg"></a>
 
-=for HTML <a href="../../actions?query=workflow%3Aubuntu"><img src="../../workflows/ubuntu/badge.svg"></a>
+=for HTML <a href="https://www.github.com/briandfoy/pegs-pdf/actions?query=workflow%3Aubuntu"><img src="../../workflows/ubuntu/badge.svg"></a>
 
-=for HTML <a href="../../actions?query=workflow%3Awindows"><img src="../../workflows/windows/badge.svg"></a>
+=for HTML <a href="https://www.github.com/briandfoy/pegs-pdf/actions?query=workflow%3Awindows"><img src="../../workflows/windows/badge.svg"></a>
 
 =for HTML <a href='https://ci.appveyor.com/project/briandfoy/pegs-pdf'><img src='https://ci.appveyor.com/api/projects/status/igfq8qfecki9mig1' /></a>
 
